# toggl-track-companion

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  analyse.py  bot.py  cli.py  entrypoint.sh  fetch.py  gunicorn.conf.py  ical.py  main.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  test.py  updater.py  version.py  web.py  web_dev.py  web_prod.py
...pre-reboot/: bot.py  entrypoint.sh  requirements.txt  updater.py  web.py
...pre-reboot/.migrate/app/: telegram.py
...pre-reboot/app/report/: analyzer.py
...pre-reboot/app/repository/: toggl.py
...pre-reboot/src/: web.py
...pre-reboot/src/db/: database.py  schema.py
...pre-reboot/src/telegram/: bot.py
...pre-reboot/src/util/: config.py
...pre-reboot/template/: base.html.j2  connect.html.j2  profile.html.j2
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: build.yml
.migrate/: cli.py
.migrate/app/: flask.py
.migrate/app/models/: app.py
.migrate/app/repository/: app.py
.migrate/app/templates/: index.html.j2  report.html.j2
app/: flask.py  telegram.py
app/models/: app.py
app/report/: analyzer.py  models.py
app/templates/: base.html.j2  report.html.j2
app/toggl/: __init__.py  api.py
app/util/: config.py  database.py
models/: app.py  telegram.py  toggl.py
repository/: app.py  toggl.py
src/: schedule.py  toggl.py  updater.py  web.py
src/db/: database.py  entity.py  schema.py
src/db/entity/: client.py  (+10 more)
src/telegram/: bot.py
src/toggl/: api.py
src/util/: config.py  log.py
src/web/: factory.py  flask.py
static/: app.css  app.js
template/: base.html.j2  detailed_report.html.j2  index.html.j2  login.html.j2  profile.html.j2  stats.html.j2
toggl/: __init__.py  api.py
util/: __init__.py  config.py  database.py
(+27 files in other folders)
