[tool.poetry]
name = "toggl-track-companion"
version = "0.0.0"
description = ""
authors = ["Jan Dittrich <mail@jand.one>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "~=1.0"
httpx = "~=0.27"
python-dateutil = "~=2.9"
flask = "~=3.0"
cryptography = "~=44.0"
icalendar = "~=5.0"
mongoengine = "~=0.29"
humanize = "~=4.10"
gunicorn = "~=23.0"

[tool.poetry.group.dev]
[tool.poetry.group.dev.dependencies]
pylint = "~=3.3"
pylint-mongoengine = "~=0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"